Fix playlist modals layout on mobile
[#182964556]

--- a/src/components/common/bodal/style.module.less
+++ b/src/components/common/bodal/style.module.less
@@ -2,11 +2,8 @@
 @import '~@boclips-ui/styles/src/breakpoints';
 
 .modalWrapper {
-  @apply bg-white w-screen h-screen fixed;
+  @apply bg-white w-screen h-screen fixed left-0 top-0;
   z-index: 51; // header is set to 50
-  top: 103px;
-  left: 0;
-  height: 560px;
 
   .modalContent {
     @apply p-4;
@@ -30,6 +27,9 @@
 @media screen and (min-width: @screen-md) {
   .modalWrapper {
     background-color: transparent;
+    top: 103px;
+    left: 0;
+    height: 560px;
 
     &:after {
       @apply w-screen h-screen fixed left-0 top-0;
